Name:                vin-parser
Version:             0.1.8.1
Synopsis:            Custom tool for transferring data from files to database.
License:             BSD3
Author:              Alexandr `voidex` Ruchkin
Maintainer:          voidex@live.com

Category:            Database
Build-type:          Simple

Cabal-version:       >= 1.8
Tested-with:         GHC == 7.6.1

Library
  hs-source-dirs: src
  Exposed-Modules:
    Snap.Snaplet.Vin
    Vin.Field
    Vin.Row
    Vin.Text
    Vin.Text.String
    Vin.Text.DateTime
    Vin.Text.Specific
    Vin.Model
    Vin.ModelField
    Vin.Models
    Vin.Models.Cars
    Vin.Utils
    Vin.Load
    Vin.Store
    Vin.Import

  Other-Modules:

  Build-depends:
    aeson                       == 0.6.*,
    base                        >= 4 && < 5,
    bytestring                  == 0.10.*,
    conduit                     == 0.5.*,
    containers                  >= 0.4 && < 0.6,
    csv-conduit                 >= 0.3.0.3 && < 0.4,
    data-lens-template          == 2.1.*,
    directory                   == 1.2.*,
    encoding                    == 0.6.*,
    filepath                    == 1.3.*,
    ghc-prim                    == 0.3.*,
    hedis                       == 0.6.*,
    email-validate              == 0.2.*,
    MonadCatchIO-transformers   >= 0.2 && < 0.4,
    mtl                         >= 2 && < 3,
    deepseq                 == 1.3.*,
    old-locale                  >= 1.0 && < 1.1,
    snap                        == 0.9.*,
    snap-core                   == 0.9.*,
    text                        >= 0.11 && < 0.12,
    time                        >= 1.4 && < 1.5,
    transformers                >= 0.2 && < 0.4,
    unordered-containers        == 0.2.*,
    xlsx                        >= 0.0.2.1 && < 0.1

  ghc-options: -Wall -fno-warn-unused-do-bind

Executable vin2redis
  hs-source-dirs: tools
  main-is: vin2redis.hs
  build-depends:
    base >= 4 && < 5,
    bytestring                  == 0.10.*,
    filepath,
    vin-parser
  
  ghc-options: -Wall

Executable vin-rename-00
  hs-source-dirs: tools
  main-is: vin-rename-00.hs
  build-depends:
    base >= 4 && < 5,
    bytestring == 0.10.*,
    containers >= 0.4 && < 0.6,
    hedis == 0.6.*,
    mtl                         >= 2 && < 3,
    transformers                >= 0.2 && < 0.4,
    vin-parser

source-repository head
  type:     git
  location: git://github.com/f-me/vin-parser.git
