Name:                vin-parser
Version:             0.4
Synopsis:            Custom tool for importing VIN files to CaRMa.
License:             BSD3
Author:              Alexandr `voidex` Ruchkin
Maintainer:          voidex@live.com

Category:            Database
Build-type:          Simple

Cabal-version:       >= 1.8
Tested-with:         GHC == 7.6.1

Library
  hs-source-dirs: src
  Exposed-Modules:
    Snap.Snaplet.Vin
    Vin.Field
    Vin.Model
    Vin.Models
    Vin.Models.Cars
    Vin.Utils
    Vin.Load
    Vin.Store
    Vin.Import

  Other-Modules:

  Build-depends:
    aeson                       == 0.6.*,
    base                        >= 4 && < 5,
    bytestring                  == 0.10.*,
    carma-http                  == 0.3.*,
    conduit                     == 1.0.*,
    containers                  >= 0.4 && < 0.6,
    csv-conduit                 == 0.5.*,
    data-lens-template          == 2.1.*,
    directory                   == 1.2.*,
    encoding                    == 0.6.*,
    filepath                    == 1.3.*,
    ghc-prim                    == 0.3.*,
    email-validate              == 0.2.*,
    mmorph                      == 1.0.*,
    MonadCatchIO-transformers   >= 0.2 && < 0.4,
    mtl                         >= 2 && < 3,
    deepseq                     == 1.3.*,
    old-locale                  >= 1.0 && < 1.1,
    resourcet                   == 0.4.*,
    snap                        >= 0.9 && < 0.12,
    snap-core                   == 0.9.*,
    snap-server                 == 0.9.*,
    text                        >= 0.11 && < 0.12,
    time                        >= 1.4 && < 1.5,
    transformers                >= 0.2 && < 0.4,
    unordered-containers        == 0.2.*,
    xlsx                        >= 0.0.2.1 && < 0.1

  ghc-options: -Wall -fno-warn-unused-do-bind

source-repository head
  type:     git
  location: git://github.com/f-me/vin-parser.git
